<?xml version="1.0"?>
<package format="2">
  <name>obindex</name>
  <version>0.0.1</version>
  <description>obindex</description>
  <maintainer email="hitimo@ethz.ch">Timo Hinzmann</maintainer>
  <author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>
  <author email="hitimo@ethz.ch">Timo Hinzmann</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/obindex</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>opencv3_catkin</depend>
  <depend>cv_bridge</depend>
</package>
